--- a/MovieStore/Views/Movies/ListOfMovies.cshtml
+++ b/MovieStore/Views/Movies/ListOfMovies.cshtml
@@ -1,4 +1,4 @@
-﻿@model MovieStore.View_Models.RandomMovieViewModel
+﻿@model MovieStore.View_Models.MovieViewModel
 @{
 	ViewBag.Title = "ListOfMovies";
 	Layout = "~/Views/Shared/_Layout.cshtml";
