--- a/MovieStore/Views/Shared/_NavBar.cshtml
+++ b/MovieStore/Views/Shared/_NavBar.cshtml
@@ -6,12 +6,12 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			@Html.ActionLink("Movie Store", "MovieStore", "Movies", new { area = "" }, new { @class = "navbar-brand" })
+			@Html.ActionLink("Movie Store", "Index", "Movies", new { area = "" }, new { @class = "navbar-brand" })
 			@*@Html.ActionLink("Application name //name of link", "Index //action name", "Home //controller", new { area = "" }, new { @class = "navbar-brand" })*@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li>@Html.ActionLink("Customers", "Customers", "Movies")</li>
+				<li>@Html.ActionLink("Customers", "Index", "Customers")</li>
 				<li>@Html.ActionLink("Movies", "ListOfMovies", "Movies")</li>
 			</ul>
 		</div>
