--- a/MovieStore/Views/Shared/_NavBar.cshtml
+++ b/MovieStore/Views/Shared/_NavBar.cshtml
@@ -12,7 +12,7 @@
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li>@Html.ActionLink("Customers", "Index", "Customers")</li>
-				<li>@Html.ActionLink("Movies", "ListOfMovies", "Movies")</li>
+				<li>@Html.ActionLink("Movie List", "ListOfMovies", "Movies")</li>
 			</ul>
 		</div>
 	</div>
