--- a/MovieStore/Views/Customers/Details.cshtml
+++ b/MovieStore/Views/Customers/Details.cshtml
@@ -1,10 +1,18 @@
 ﻿@model MovieStore.Models.Customer
 
 @{
-    ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewBag.Title = "Details";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Details</h2>
 
 <h3>@Model.Name</h3>
+<ul>
+	<li>Membership Type: <span>@Model.MembershipType.Name</span></li>
+	
+	@if (Model.BirthDate != null)
+	{
+		<li><p>Birth Date: <span>@Model.BirthDate.Value.ToShortDateString()</span></p></li>
+	}
+</ul>
