--- a/MovieStore/Views/Movies/ListOfMovies.cshtml
+++ b/MovieStore/Views/Movies/ListOfMovies.cshtml
@@ -9,13 +9,17 @@
 	<thead>
 		<tr>
 			<th>Name</th>
+			<th>Genre</th>
 		</tr>
 	</thead>
 	<tbody>
 		@{ 
 			foreach(var movie in Model.Movie)
 			{
-				<tr><td>@movie.Name</td></tr>
+				<tr>
+					<td>@Html.ActionLink(movie.Name,"Details","Movies",new { id= movie.Id},null)</td>
+					<td>@movie.Genre.Name</td>
+				</tr>
 			}
 		}
 	</tbody>
