--- a/MovieStore/Content/bootstrap.css
+++ b/MovieStore/Content/bootstrap.css
@@ -187,14 +187,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-th {
-	border: 1px solid aliceblue;
-	text-align: center;
-}
-td {
-	text-align: center;
-	border: 1px solid aliceblue;
-	width: 300px;
+
+td, th {
+	text-align: left;
 }
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
