--- a/MovieStore/Views/Customers/Index.cshtml
+++ b/MovieStore/Views/Customers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MovieStore.View_Models.MovieViewModel
+﻿@model MovieStore.View_Models.ListViewModel
 @{
 	ViewBag.Title = "Index";
 	Layout = "~/Views/Shared/_Layout.cshtml";
@@ -18,7 +18,7 @@
 			}
 		}
 	</ul>*@
-	<table>
+	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th>Customer Name</th>
