--- a/MovieStore/Views/Customers/CustomerForm.cshtml
+++ b/MovieStore/Views/Customers/CustomerForm.cshtml
@@ -37,6 +37,8 @@
 }
 @*this second } creates </form> opening tag if we use using method*@
 
+
+@*client side validation script*@
 @section scripts
 {
 	@Scripts.Render("~/bundles/jqueryval")
