--- a/MovieStore/Views/Movies/MovieForm.cshtml
+++ b/MovieStore/Views/Movies/MovieForm.cshtml
@@ -10,27 +10,39 @@
 	<div class="form-group">
 		@Html.LabelFor(m => m.Movie.Name)
 		@Html.TextBoxFor(m => m.Movie.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.Name)
 	</div>
 
 	<div class="form-group">
 		@Html.LabelFor(m => m.Genres)
 		@Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.Genres, "Id", "Name"), "Select Genre", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.GenreId)
 	</div>
 
 	<div class="form-group">
 		@Html.LabelFor(m => m.Movie.DateAdded)
 		@Html.TextBoxFor(m => m.Movie.DateAdded, "{0: dd MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.DateAdded)
 	</div>
 
 	<div class="form-group">
 		@Html.LabelFor(m => m.Movie.ReleaseDate)
 		@Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0: dd MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.ReleaseDate)
 	</div>
 
 	<div class="form-group">
 		@Html.LabelFor(m => m.Movie.NumberInStock)
 		@Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.NumberInStock)
 	</div>
 	@Html.HiddenFor(m => m.Movie.Id)
+    @Html.AntiForgeryToken()
 	<button type="submit" class="btn btn-primary">Save</button>
+}
+
+@*client side validation script*@
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
