--- a/MovieStore/Views/Movies/ListOfMovies.cshtml
+++ b/MovieStore/Views/Movies/ListOfMovies.cshtml
@@ -5,24 +5,51 @@
 }
 
 <h2>List Of Movies</h2>
-<a href="../movies/newmovie" class="btn btn-primary">New Movie</a>
-<table class="table table-striped">
-	<thead>
-		<tr>
-			<th>Name</th>
-			<th>Genre</th>
-		</tr>
-	</thead>
-	<tbody>
-		@{ 
-			foreach(var movie in Model.Movie)
-			{
-				<tr>
-					<td>@Html.ActionLink(movie.Name,"Edit","Movies",new { id= movie.Id}, null)</td>
-					<td>@movie.Genre.Name</td>
-				</tr>
-			}
-		}
-	</tbody>
+<a href="../movies/newmovie" class="btn btn-primary" style="margin-bottom:10px;">New Movie</a>
+<table class="table table-striped" id="movies">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Genre</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        @{
+            foreach (var movie in Model.Movie)
+            {
+                <tr>
+                    <td>@Html.ActionLink(movie.Name, "Edit", "Movies", new { id = movie.Id }, null)</td>
+                    <td>@movie.Genre.Name</td>
+                    <td>
+                        <button data-movie-id="@movie.Id" class="btn-link js-delete">Delete</button>
+                    </td>
+                </tr>
+            }
+        }
+    </tbody>
 </table>
+@section scripts{
+    <script>
+        $(document).ready(function () {
+            $("#movies").DataTable();
 
+            $("#movies").on("click",".js-delete", function () {
+                var button = $(this);
+                bootbox.confirm("Are you sure you want to delete this customer ?", function (result) {
+                    if(result)
+                    {
+                        $.ajax({
+                            url: "/api/movies/" + button.attr("data-movie-id"),
+                            method: "DELETE",
+                            success: function () {
+                                console.log("Success");
+                                button.parents("tr").remove();
+                            }
+                        });
+                    }
+                });
+            });
+        });
+    </script>
+}
